[tool.poetry]
name = "llm-classification"
version = "0.1.0"
description = ""
authors = ["Joy Cheng <joy.cheng@phntms.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
openai = "^1.37.1"
jupyter = "^1.0.0"
instructor = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
